# ChangeLog for net-im/psi
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Sep 2010; Rion <rion4ik@gmail.com> psi-9999.ebuild:
  psi: fix compilation failure

  13 Aug 2010; Rion <rion4ik@notagmail.com> psi-9999.ebuild:
  fix revision writing

  10 Jun 2010; Rion <rion4ik@notagmail.com> psi-9999.ebuild:
  fix revision number

  10 Jun 2010; Rion <rion4ik@notagmail.com> psi-9999.ebuild:
  ebuild synced with portage

  29 Apr 2010; Rion <rion4ik@notagmail.com> psi-9999.ebuild:
  changed webkit configure option in the upstream

  11 Apr 2010; Rion <rion4ik@gmail.com> psi-9999.ebuild:
  move to qt4-r2

  12 Mar 2010; <slep@gentoo.org> metadata.xml:
  fix repoman QA

  27 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> metadata.xml:
  add plugin flag in metadata.xml

  05 Dec 2006; Stefan Schweizer <genstef@gentoo.org> ChangeLog:
  remove 0.11_pre20061020 - older than beta4 and does not build for me

*psi-0.11_beta4 (04 Dec 2006)

  04 Dec 2006; Hanno Boeck <hanno@gentoo.org> +psi-0.11_beta4.ebuild:
  Add beta version of 0.11.

  13 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> psi-0.10.ebuild:
  Remove xmms useflag.

*psi-0.10-r2 (12 Nov 2006)

  12 Nov 2006; Przemysław Maciąg <troll@gentoo.org>
  -files/psi-taskbar_flashing.patch, -psi-0.10-r1.ebuild,
  +psi-0.10-r2.ebuild:
  Removing broken psi-0.10-r1, so everyone will see it changed. Removing xmms
  support in status messages (xmms must die) - added audacious initial
  support. Probably fixing #154556 - some qmake problems, when creating
  makefiles. Fixing langpacks installation (#149590). Closing #139159 - it's
  time for psi-0.11. Small ebuild cleanups.

  27 Oct 2006; Gustavo Felisberto <humpback@gentoo.org>;
  files/digest-psi-0.10, files/digest-psi-0.10-r1, Manifest:
  Re-fixed the bug that genstef re-introduced in the digest.

  25 Oct 2006; Stefan Schweizer <genstef@gentoo.org>
  psi-0.11_pre20061020.ebuild:
  remove ~amd64, users say that it does not build
