@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Oct 2010; Rion <rion4ik@notagmail.com> psi-9999.ebuild:
+  fixed revision getting
+
   12 Sep 2010; Rion <rion4ik@gmail.com> psi-9999.ebuild:
   psi: fix compilation failure
 
